last commit on top-servicios and fix overflow on top-ventas

--- a/react-uvgente/src/components/Servicio/new-servicio-style.css
+++ b/react-uvgente/src/components/Servicio/new-servicio-style.css
@@ -41,6 +41,7 @@
     padding: 20px 10px;
     column-gap: 50px;
     row-gap: 20px;
+    overflow: scroll;
 
 }
 .title-and-filters-wrapper{
@@ -134,4 +135,28 @@
     height: 40px;
     border-radius: 10px;
     overflow: hidden;
+}
+.right-side-card-servicio{
+    width: 200px;
+    height: 100%;
+    padding: 10px;
+    
+    display: flex;
+    flex-direction: column;
+}
+.name-space-on-card-item-service{
+    display: flex;
+    justify-content: center;
+    font-size: x-large;
+    width: 100%;
+    height: 80px;
+    
+}
+.calification-space{
+    display: flex;
+    justify-content: center;
+}
+.star{
+    color: #274527;
+    border-color: #274527;
 }
